--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -2,10 +2,12 @@
   "name": "kiosk-ui",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "start": "vite --mode electron",
+    "build": "tsc && vite build && electron-builder",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -19,12 +21,27 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "electron": "^39.2.3",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-electron": "^0.29.0"
+  },
+  "build": {
+    "appId": "com.kiosk.app",
+    "productName": "kiosk-ui",
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*"
+    ],
+    "directories": {
+      "output": "dist",
+      "buildResources": "public"
+    }
   }
 }
