--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -9,7 +9,8 @@
     "start": "vite --mode electron",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:network": "vite --host"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
