--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiosk-ui",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist-electron/main.js",
   "scripts": {
@@ -13,13 +13,13 @@
     "dev:network": "vite --host"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
@@ -42,10 +42,14 @@
   "build": {
     "appId": "com.kiosk.app",
     "productName": "kiosk-ui",
+    "npmRebuild": false,
+    "nodeGypRebuild": false,
+    "asar": true,
     "files": [
       "dist/**/*",
       "dist-electron/**/*"
     ],
+    
     "directories": {
       "output": "dist",
       "buildResources": "public"
