--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -41,7 +41,7 @@
   },
   "build": {
     "appId": "com.kiosk.app",
-    "productName": "kiosk-ui",
+    "productName": "Kiosk Order Platform",
     "npmRebuild": false,
     "nodeGypRebuild": false,
     "asar": true,
@@ -49,10 +49,52 @@
       "dist/**/*",
       "dist-electron/**/*"
     ],
-    
     "directories": {
       "output": "dist",
       "buildResources": "public"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ],
+      "icon": "public/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
+    "mac": {
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "category": "public.app-category.business",
+      "icon": "public/icon.icns"
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": ["AppImage"],
+      "category": "Utility"
     }
   }
 }
