--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Install dependencies
         working-directory: apps/kiosk-ui
         run: npm ci
+        timeout-minutes: 10
 
       - name: Build Electron App (Windows)
         if: matrix.os == 'windows-latest'
