--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -2,6 +2,12 @@
   "name": "kiosk-ui",
   "private": true,
   "version": "1.0.0",
+  "description": "Kiosk Order Platform - Self-service ordering system",
+  "author": "PaulDebril",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PaulDebril/Kiosk-Order-Platform.git"
+  },
   "type": "module",
   "main": "dist-electron/main.js",
   "scripts": {
@@ -45,6 +51,11 @@
     "npmRebuild": false,
     "nodeGypRebuild": false,
     "asar": true,
+    "publish": {
+      "provider": "github",
+      "owner": "PaulDebril",
+      "repo": "Kiosk-Order-Platform"
+    },
     "files": [
       "dist/**/*",
       "dist-electron/**/*"
