--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Build
         working-directory: apps/kiosk-ui
-        run: npm run build
+        run: npm run build:frontend-only
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: false
 
